--- a/client/index.html
+++ b/client/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    coucou depuis le client avec killian
+    coucou depuis le client avec navbar
 </body>
 </html>
