--- a/client/index.html
+++ b/client/index.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Accueil</title>
 </head>
+<link rel="stylesheet" href="./css/index.css">
 <body>
-    coucou depuis le client avec Home
+    <div class="container">
+        <h1 class="title">EPIC RIVALS</h1>
+        <button class="start-button">Start</button>
+    </div>
 </body>
 </html>
