--- a/client/Bonus.html
+++ b/client/Bonus.html
@@ -8,7 +8,18 @@
 <link rel="stylesheet" href="./css/bonus.css">
 <body>
     <h1 class="title">CHOISISSEZ UN BONUS <br> POUR CHAQUE <br>EQUIPE</h1>
-
+    <div id="container2">
+        <div class="avatar"></div>
+        <div class="avatar"></div>
+        <div class="avatar"></div>
+        <div class="avatar"></div>
+        <div class="avatar"></div>
+        <div class="avatar"></div>
+        <div class="avatar"></div>
+        <div class="avatar"></div>
+        <div class="avatar"></div>
+        <div class="avatar"></div>
+    </div>
     <button class="valide">VALIDEZ</button>
 </body>
 </html>
