--- a/client/choixunite.html
+++ b/client/choixunite.html
@@ -1,12 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Choix des unites</title>
 </head>
 <link rel="stylesheet" href="./css/choixunite.css">
+
 <body>
     <h1 class="title">CHOIX DES UNITES</h1>
+    <div id="container2">
+        <div class="avatar"></div>
+        <div class="avatar"></div>
+    </div>
+
+    <div class="container">
+
+        <div class="section" id="section1">
+            <div class="square">
+                <button class="button"><img src="./img/Vector.svg" alt="croix"></button>
+            </div>
+            <div class="square">
+                <button class="button"><img src="./img/Vector.svg" alt="croix"></button>
+            </div>
+            <div class="square">
+                <button class="button"><img src="./img/Vector.svg" alt="croix"></button>
+            </div>
+            <div class="square">
+                <button class="button"><img src="./img/Vector.svg" alt="croix"></button>
+            </div>
+            <div class="square">
+                <button class="button"><img src="./img/Vector.svg" alt="croix"></button>
+            </div>
+        </div>
+
+        <div class="section" id="section2">
+            <div class="square">
+                <button class="button"><img src="./img/Vector.svg" alt="croix"></button>
+            </div>
+            <div class="square">
+                <button class="button"><img src="./img/Vector.svg" alt="croix"></button>
+            </div>
+            <div class="square">
+                <button class="button"><img src="./img/Vector.svg" alt="croix"></button>
+            </div>
+            <div class="square">
+                <button class="button"><img src="./img/Vector.svg" alt="croix"></button>
+            </div>
+            <div class="square">
+                <button class="button"><img src="./img/Vector.svg" alt="croix"></button>
+            </div>
+        </div>
+    </div>
 </body>
+
 </html>
