--- a/client/Bonus.html
+++ b/client/Bonus.html
@@ -33,53 +33,53 @@
 
 
     <div id="avatar" class="mySwiper">
-        <div id="avatar-1" class="swiper-wrapper">
-            <div class="swiper-slide">
+        <div class="swiper-wrapper">
+            <div id="avatar-1" class="swiper-slide">
                 <img src="img/Anwen.png" alt="nature" id="anwen" class="avatarImg">
                 <h3>Défense+1</h3>
             </div>
 
-            <div class="swiper-slide">
+            <div id="avatar-2" class="swiper-slide">
                 <img src="img/Lasir.png" alt="nature" id="lasir" class="avatarImg">
                 <h3>Défense+1</h3>
             </div>
 
-            <div class="swiper-slide">
+            <div id="avatar-3"  class="swiper-slide">
                 <img src=" img/Alexei.png" alt="human" id="alexei" class="avatarImg">
                 <h3>Défense+1</h3>
             </div>
 
-            <div class="swiper-slide">
+            <div id="avatar-4" class="swiper-slide">
                 <img src=" img/Fiona.png" alt="human" id="fiona" class="avatarImg">
                 <h3>Défense+1</h3>
             </div>
 
-            <div class="swiper-slide">
+            <div id="avatar-5" class="swiper-slide">
                 <img src=" img/Cyrus.png" alt="ordre" id="cyrus" class="avatarImg">
                 <h3>Défense+1</h3>
             </div>
 
-            <div class="swiper-slide">
+            <div id="avatar-6"  class="swiper-slide">
                 <img src=" img/Delara.png" alt="ordre" id="delara" class="avatarImg">
                 <h3>Défense+1</h3>
             </div>
 
-            <div class="swiper-slide">
+            <div id="avatar-7" class="swiper-slide">
                 <img src="img/Azexes.png" alt="chaos" id="azexes" class="avatarImg">
                 <h3>Défense+1</h3>
             </div>
 
-            <div class="swiper-slide">
+            <div id="avatar-8" class="swiper-slide">
                 <img src="img/Necro_Fiona.png" alt="chaos" id="necro" class="avatarImg">
                 <h3>Défense+1</h3>
             </div>
 
-            <div class="swiper-slide">
+            <div id="avatar-9"  class="swiper-slide">
                 <img src="img/Skeleton.png" alt="mort" id="skeleton" class="avatarImg">
                 <h3>Défense+1</h3>
             </div>
 
-            <div class="swiper-slide">
+            <div id="avatar-10" class="swiper-slide">
                 <img src="img/Jezebeth.png" alt="mort" id="jezebeth" class="avatarImg">
                 <h3>Défense+1</h3>
             </div>
