--- a/client/choixunite.html
+++ b/client/choixunite.html
@@ -52,7 +52,32 @@
                 <button class="button"><img src="./img/Vector.svg" alt="croix"></button>
             </div>
         </div>
+
     </div>
+
+    <div id="modal" class="modal">
+        <div> <input class="pseudo"   type="text" placeholder="Choisir un Pseudo"></div>
+
+        <!-- <div id="uniteList" class="unite-list">
+            <div id="unite1"></div>
+            <div id="unite2"></div>
+            <div id="unite3"></div>
+        </div> -->
+
+        <div id="uniteList" class="unite-list">
+            <div class="unites" id="unite1" data-value="unite1"> </div>
+            <div class="unites" id="unite2" data-value="unite2"> </div>
+            <div class="unites" id="unite3" data-value="unite3"> </div>
+        </div>
+
+        <button id="valideUnit"> OK </button>
+
+    </div>
+
+
+    <button id="valide" disabled> VALIDEZ </button>
+
+    <script src="./JS/choixunite.js"></script>
 </body>
 
 </html>
