--- a/client/combat.html
+++ b/client/combat.html
@@ -4,8 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>combat</title>
+    <link rel="stylesheet" href="./css/combat.css">
+
 </head>
 <body>
+    <div class="container">
+
+    </div>
+
+
+    <script src="./JS/combat.js"></script>
     
 </body>
 </html>
