linker toutes les page, css regle modifié, buttons

--- a/client/regle.html
+++ b/client/regle.html
@@ -28,5 +28,6 @@
             <button class="triangle-button"></button>
     </div>
     
+    <script src="./JS/regles.js"></script>
 </body>
 </html>
