--- a/client/Bonus.html
+++ b/client/Bonus.html
@@ -21,52 +21,52 @@
     <div id="avatar" class="mySwiper">
         <div class="swiper-wrapper">
             <div id="avatar-1" class="swiper-slide">
-                <img src="img/Anwen.png" alt="nature" id="anwen" class="avatarImg">
+                <img src="img/Anwen.png" alt="nature" id="anwen" class="avatarImg" data-avatar-id="1">
                 <h3>Défense+1</h3>
             </div>
 
             <div id="avatar-2" class="swiper-slide">
-                <img src="img/Lasir.png" alt="nature" id="lasir" class="avatarImg">
+                <img src="img/Lasir.png" alt="nature" id="lasir" class="avatarImg" data-avatar-id="2">
                 <h3>Défense+1</h3>
             </div>
 
             <div id="avatar-3" class="swiper-slide">
-                <img src=" img/Alexei.png" alt="human" id="alexei" class="avatarImg">
+                <img src=" img/Alexei.png" alt="human" id="alexei" class="avatarImg" data-avatar-id="3">
                 <h3>Défense+1</h3>
             </div>
 
             <div id="avatar-4" class="swiper-slide">
-                <img src=" img/Fiona.png" alt="human" id="fiona" class="avatarImg">
+                <img src=" img/Fiona.png" alt="human" id="fiona" class="avatarImg" data-avatar-id="4">
                 <h3>Défense+1</h3>
             </div>
 
             <div id="avatar-5" class="swiper-slide">
-                <img src=" img/Cyrus.png" alt="ordre" id="cyrus" class="avatarImg">
+                <img src=" img/Cyrus.png" alt="ordre" id="cyrus" class="avatarImg" data-avatar-id="5">
                 <h3>Défense+1</h3>
             </div>
 
             <div id="avatar-6" class="swiper-slide">
-                <img src=" img/Delara.png" alt="ordre" id="delara" class="avatarImg">
+                <img src=" img/Delara.png" alt="ordre" id="delara" class="avatarImg" data-avatar-id="6">
                 <h3>Défense+1</h3>
             </div>
 
             <div id="avatar-7" class="swiper-slide">
-                <img src="img/Azexes.png" alt="chaos" id="azexes" class="avatarImg">
+                <img src="img/Azexes.png" alt="chaos" id="azexes" class="avatarImg" data-avatar-id="7">
                 <h3>Défense+1</h3>
             </div>
 
             <div id="avatar-8" class="swiper-slide">
-                <img src="img/Necro_Fiona.png" alt="chaos" id="necro" class="avatarImg">
+                <img src="img/Necro_Fiona.png" alt="chaos" id="necro" class="avatarImg" data-avatar-id="8">
                 <h3>Défense+1</h3>
             </div>
 
             <div id="avatar-9" class="swiper-slide">
-                <img src="img/Skeleton.png" alt="mort" id="skeleton" class="avatarImg">
+                <img src="img/Skeleton.png" alt="mort" id="skeleton" class="avatarImg" data-avatar-id="9">
                 <h3>Défense+1</h3>
             </div>
 
             <div id="avatar-10" class="swiper-slide">
-                <img src="img/Jezebeth.png" alt="mort" id="jezebeth" class="avatarImg">
+                <img src="img/Jezebeth.png" alt="mort" id="jezebeth" class="avatarImg" data-avatar-id="10">
                 <h3>Défense+1</h3>
             </div>
 
