--- a/client/index.html
+++ b/client/index.html
@@ -11,5 +11,9 @@
         <h1 class="title">EPIC RIVALS</h1>
         <button class="start-button">Start</button>
     </div>
+    <audio id="background-audio" loop autoplay>
+        <source src="./music/hope.mp3" type="audio/mpeg">
+        Votre navigateur ne supporte pas l'élément audio.
+    </audio>
 </body>
 </html>
