redirection sur une random page

--- a/client/choixunite.html
+++ b/client/choixunite.html
@@ -75,7 +75,7 @@
     </div>
 
 
-    <button id="valide" disabled> VALIDEZ </button>
+    <button id="valide"> VALIDEZ </button>
 
     <script src="./JS/choixunite.js"></script>
 </body>
