--- a/client/index.html
+++ b/client/index.html
@@ -11,5 +11,8 @@
         <h1 class="title">EPIC RIVALS</h1>
         <button class="start-button">Start</button>
     </div>
+
+
+    <script src="./JS/index.js"></script>
 </body>
 </html>
