page choix des unités remise en forme

--- a/client/choixunite.html
+++ b/client/choixunite.html
@@ -75,7 +75,7 @@
     </div>
 
 
-    <button id="valide"> VALIDEZ </button>
+    <button id="valide"> COMBAT </button>
 
     <script src="./JS/choixunite.js"></script>
 </body>
