--- a/client/faction.html
+++ b/client/faction.html
@@ -9,7 +9,16 @@
 <link rel="stylesheet" href="./css/faction.css">
 
 <body>
+
+  
     <div class="container">
+
+        <div id="container2">
+            <div class="avatar"></div>
+            <div class="avatar"></div>
+        </div>
+        
+
         <h1 class="title">CHOIX FACTION</h1>
 
         <div class="embleme">
@@ -30,7 +39,9 @@
         <div id="modal" class="modal">
             <div id="monsterList" class="monster-list"></div>
         </div>
+
         <button id="valide" disabled> VALIDEZ </button>
+        
         <div class="stagecontainer">
             <img class="stagemini" src="img/166495 3.png" alt="mini">
             <img class="stagemini" src="img/166729 3.png" alt="mini">
@@ -40,6 +51,7 @@
         </div>
     </div>
 
+  
 
 
 </body>
