--- a/client/faction.html
+++ b/client/faction.html
@@ -14,8 +14,10 @@
     <div class="container">
 
         <div id="container2">
-            <div class="avatar"></div>
-            <div class="avatar"></div>
+            <div class="avatar" id="avatar1">
+            </div>
+            <div class="avatar" id="avatar2">
+            </div>
         </div>
         
 
