--- a/client/choixunite.html
+++ b/client/choixunite.html
@@ -17,7 +17,7 @@
 
     <div class="container">
 
-        <div class="section" id="section1">
+        <div class="section1" id="section1">
             <div class="square">
                 <button class="button"><img src="./img/Vector.svg" alt="croix"></button>
             </div>
@@ -35,7 +35,7 @@
             </div>
         </div>
 
-        <div class="section" id="section2">
+        <div class="section2" id="section2">
             <div class="square">
                 <button class="button"><img src="./img/Vector.svg" alt="croix"></button>
             </div>
@@ -58,11 +58,6 @@
     <div id="modal" class="modal">
         <div> <input class="pseudo"   type="text" placeholder="Choisir un Pseudo"></div>
 
-        <!-- <div id="uniteList" class="unite-list">
-            <div id="unite1"></div>
-            <div id="unite2"></div>
-            <div id="unite3"></div>
-        </div> -->
 
         <div id="uniteList" class="unite-list">
             <div class="unites" id="unite1" data-value="unite1"> </div>
