--- a/client/choixunite.html
+++ b/client/choixunite.html
@@ -5,10 +5,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Choix des unites</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+    <link rel="stylesheet" href="./css/choixunite.css">
 </head>
-<link rel="stylesheet" href="./css/choixunite.css">
+
 
 <body>
+
+    <audio id="audio" loop src="music/selection.mp3"></audio>
+    <header>
+        <i class="fa-solid fa-volume-high" style=" color:#c79d08" id="icone-volume"></i>
+        <i class="fa-solid fa-volume-xmark" style=" color:#c79d08; display: none;" id="icone-volume-mute"></i>
+    </header>
+
     <h1 class="title">CHOIX DES UNITES</h1>
     <div id="container2">
         <div class="avatar" id="avatar1"></div>
@@ -56,7 +67,7 @@
     </div>
 
     <div id="modal" class="modal">
-        <div> <input class="pseudo"   type="text" placeholder="Choisir un Pseudo"></div>
+        <div> <input class="pseudo" type="text" placeholder="Choisir un Pseudo"></div>
 
 
         <div id="uniteList" class="unite-list">
