--- a/client/resumepartie.html
+++ b/client/resumepartie.html
@@ -5,12 +5,21 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
 	<link rel="stylesheet" href="./css/resumepartie.css">
 
 
 </head>
 
 <body>
+
+	<audio id="audio" loop src="music/hope.mp3"></audio>
+    <header> 
+        <i class="fa-solid fa-volume-high" style=" color:#c79d08"  id="icone-volume"></i>
+        <i class="fa-solid fa-volume-xmark" style=" color:#c79d08; display: none;"  id="icone-volume-mute"></i>
+    </header>
 
 <div class="container">
 
